1.4.9 (not yet released):
- Improve output.

1.4.8:
- Improve the "make clean" capability.
- Add a dependency to ORM for both RPMs and .debs.

1.4.7:
- [Ticket #430] Avoid misleading message when drop the database in
non-interactive mode.
- Code cleaning-up.

1.4.6:
- Better handling of errors.
- Fix the Debian copyright.
- Modification of the spec so we can create the RPM on FC11 (patch from 
Christophe Trophime).

1.4.5:
- Include perldoc documentation for OSCAR::ODA_Defs.
- Add a new function to get the list of all selected OPKGs (avoid code
duplication in other OSCAR components).

1.4.4:
- Make sure the make_database_password script will not fail without perl-Tk
(which happens if users only want to use the CLI).
- Continue to improve error handling.
- During initialization, make sure we execute the set_global_oscar_values
script.
- get_opkg_selection_data can now return the data for all selected OPKGs.

1.4.3:
- Update the list of prereqs for ubuntu.
- Explicitely restart the MYSQL service before to actually initialize the 
database.
- Make some return codes more coherent.

1.4.2:
- Fix the query to get the list of selected OPKGs.
- Improved error handling.

1.4.1:
- Before to reset ODA, we try to start the database daemon so we are sure we
can actually try to delete the OSCAR database.
- Implement a work around when detecting the database type during a reset.
- Update the prereqs list for Debian based systems.
- Fix a bug when saving image data.

1.4:
- Add the capability of reseting ODA.
- Force the start of the database daemon during ODA initialization.
- Fix a problem with the mysql prereq on Debian based system (actually install
mysql and not only the libraries).
- Modify the Makefile so we can choose the directory where the binary packages
are stored.
- Enable the creation of unsigned Debian packages by setting the
UNSIGNED_OSCAR_PKG environment variable.

1.3.5:
- Slightly improve debugging messages.